# ClaudeBox

./: .gitignore  CHANGELOG.md  CLAUDE.md  ChatPanel.tsx  README.en.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
sidecar/: bridge.mjs  lark-bot.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: claude.rs  lib.rs
src/components/: ChangelogDialog.tsx  ReleaseNotesDialog.tsx  UpdateToast.tsx
src/components/chat/: ChatPanel.tsx  CodeBlock.tsx  FileTree.tsx  FileViewer.tsx  InputArea.tsx  MessageBubble.tsx  NewSessionDialog.tsx  TaskBoard.tsx  ToolCallCard.tsx
src/components/debug/: DebugPanel.tsx
src/components/settings/: AddModelDialog.tsx  InstallWizard.tsx  SettingsDialog.tsx
src/components/sidebar/: NewSessionDialog.tsx  SessionList.tsx  Sidebar.tsx
src/lib/: changelog.ts  claude-ipc.ts  i18n.ts  providers.ts  remark-gfm-safe.ts  skills.ts  stream-parser.ts  updater.ts  utils.ts
src/stores/: chatStore.ts  larkStore.ts  settingsStore.ts  skillsStore.ts  taskStore.ts
