[package]
name = "app"
version = "0.5.3"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2.3.5"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
base64 = "0.22"
arboard = { version = "3", features = ["image-data"] }
image = { version = "0.25", default-features = false, features = ["png"] }
# Enable SOCKS5 proxy support for reqwest (used by tauri-plugin-updater).
# Cargo feature unification ensures the existing reqwest 0.13 gains the socks feature.
reqwest = { version = "0.13", default-features = false, features = ["socks"] }
[target.'cfg(unix)'.dependencies]
libc = "0.2.183"
